updated pics and write ups

--- a/website/templates/aberdeen.html
+++ b/website/templates/aberdeen.html
@@ -84,9 +84,10 @@
             <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
-            <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
-                We would love to welcome you to our family, or simply connect with a phone call to check in on you.
-                We would love to get to know you and your family!
+            <p>Greater Bethlehem Temple Church actively seeks to become a resource to the community by demonstrating the
+                love of Jesus Christ to the world. We would love to welcome you to our family, or simply connect with a
+                phone call to check in on you. Get to know us through dozens of distinct ministries aimed at pointing
+                souls to Christ.
             </p>
         </div>
     </div>
@@ -116,15 +117,14 @@
     <!--        <hr class="heading-divider">-->
 
                 <p>
-                    Welcome to our vibrant church 201 South Columbus Street, Aberdeen, MS, where you'll find a warm and welcoming community
-                    of faith! We invite you to join us as we gather together to worship, grow spiritually, and impact
-                    our community with God's love. Our church is a place where people from all walks of life can come
-                    as they are and find acceptance, encouragement, and support. With heartfelt worship, inspiring
-                    messages, and engaging programs for all ages, we strive to create an environment where everyone
-                    can experience the transforming power of God's presence. Whether you're new to the area or
-                    searching for a spiritual home, we welcome you with open arms. Come and be a part of our church
-                    family as we journey together in faith, serve our community, and grow in our love for God and
-                    one another. We can't wait to meet you and share in the blessings of fellowship and worship.
+                    Welcome to our vibrant campus at 201 South Columbus Street, Aberdeen, Mississippi, where you'll
+                    find a warm and welcoming community of faith! We invite you to join us as we gather together to
+                    worship, grow spiritually, and impact our community with God's love. Our church is a place where
+                    people from all walks of life can come as they are and find acceptance, encouragement, and support.
+                    With heartfelt worship, inspiring messages, and engaging lessons for all ages, we strive to create
+                    an environment where everyone can experience the transforming power of God's presence. Whether
+                    you're new to the area or searching for a spiritual home, we welcome you with open arms. We can't
+                    wait to meet you and share in the blessings of fellowship and worship.
                 </p>
             </div>
         </div>
@@ -164,10 +164,10 @@
             <div class="connect-content">
                 <h3>Get Connected</h3>
                 <p>
-                    Looking for a place to belong, grow, and make a difference? Join our church in Aberdeen, MS!
-                    Experience uplifting worship, inspiring teachings, and a welcoming community. Connect with
-                    like-minded individuals, engage in meaningful programs, and discover the joy of serving others.
-                    Come as you are and be a part of our church family. We can't wait to meet you!
+                    Looking for a place to belong, grow, and make a difference? Join us on our campus in
+                    Aberdeen, Mississippi! Experience uplifting worship, inspiring teachings, and a welcoming community.
+                    Connect with like-minded individuals, engage in meaningful studies, and discover the joy of serving
+                    others. Come as you are and be a part of our family. We look forward to worshipping with you.
                     <br> <br>
                     <b>201 South Columbus Street - Aberdeen, MS
                     <br> <br>
