--- a/website/templates/childrens_ministry.html
+++ b/website/templates/childrens_ministry.html
@@ -84,9 +84,10 @@
             <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
-            <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
-                We would love to welcome you to our family, or simply connect with a phone call to check in on you.
-                We would love to get to know you and your family!
+            <p>Greater Bethlehem Temple Church actively seeks to become a resource to the community by demonstrating the
+                love of Jesus Christ to the world. We would love to welcome you to our family, or simply connect with a
+                phone call to check in on you. Get to know us through dozens of distinct ministries aimed at pointing
+                souls to Christ.
             </p>
         </div>
     </div>
@@ -115,7 +116,7 @@
         <!--        <hr class="heading-divider">-->
 
                     <p>
-                        Our vibrant Children's Ministry, where young hearts find a home filled with love,
+                        Our vibrant Children's Ministry is where young hearts find a home filled with love,
                         laughter, and limitless possibilities! We believe in creating an engaging and nurturing environment
                         that sparks joy and curiosity in every child. Through inspiring worship, interactive teachings,
                         and exciting activities, we invite your little ones to embark on a faith-filled adventure like no
@@ -142,11 +143,11 @@
                 <div class="grid">
                     <div>
                         <div class="image">
-                            <img src="../static/images/logo.png" class="image__img">
+                            <img src="../static/images/donalds.jpeg" class="image__img">
                             <div class="image__overlay image__overlay--primary">
-                            <div class="image__title">Event Title</div>
+                            <div class="image__title">Ministry Leaders</div>
                             <div class="image__description">
-                                Event overview
+                                Deacon Lester Donald <br><br> Sis. Cheronika Donald, Director
                             </div>
                             </div>
                         </div>
@@ -163,15 +164,14 @@
                     <h3>Get Connected</h3>
                     <p>
                         Are you ready to embark on an incredible journey with our Children's Ministry? We invite you to
-                        get connected and become part of this thriving community that impacts young lives in profound ways.
-                        Whether you're a parent, guardian, or simply passionate about investing in the next generation,
-                        there are numerous opportunities for you to get involved. Join our dedicated team of volunteers
-                        and make a difference in the lives of our children. You can also participate in our engaging
-                        programs, attend special events, and support our ministry through your presence and prayers.
-                        Together, let's create a nurturing and inspiring environment where children can grow in their
-                        faith, build lifelong friendships, and discover their unique potential. Come and be part of the joy,
-                        laughter, and transformation happening in our Children's Ministry. We can't wait to welcome you
-                        into our community!
+                        get connected and become part of this thriving community that impacts young lives in profound
+                        ways. Whether you're a parent, guardian, or simply passionate about investing in the next
+                        generation, there are numerous opportunities for you to get involved. Join our dedicated group
+                        of volunteers and make a difference in the lives of our children. You can also participate in
+                        our engaging programs, attend special events, and support our ministry through your presence
+                        and prayers. We can't wait to welcome you to our team!
+                        <br><br>
+                        Email us at: ChildrenMinistry@gbtchurch.org to get started.
                     </p>
                 </div>
             </div>
