--- a/website/templates/education.html
+++ b/website/templates/education.html
@@ -84,9 +84,10 @@
             <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
-            <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
-                We would love to welcome you to our family, or simply connect with a phone call to check in on you.
-                We would love to get to know you and your family!
+            <p>Greater Bethlehem Temple Church actively seeks to become a resource to the community by demonstrating the
+                love of Jesus Christ to the world. We would love to welcome you to our family, or simply connect with a
+                phone call to check in on you. Get to know us through dozens of distinct ministries aimed at pointing
+                souls to Christ.
             </p>
         </div>
     </div>
@@ -108,7 +109,7 @@
     <div class="our-impact">
 
         <div class="impact-img">
-            <img src="../static/images/teach.jpg">
+            <img src="../static/images/education.jpeg">
             <div class="impact-content">
 
 
@@ -116,15 +117,15 @@
     <!--        <hr class="heading-divider">-->
 
                 <p>
-                    Our Education Program is a place where learning and personal growth come
-                    alive! We invite you to embark on an exciting journey of discovery as we explore various topics,
-                    enhance our skills, and deepen our knowledge. Our ministry offers a wide
-                    range of educational programs, workshops, and classes designed to meet the diverse interests and
-                    needs of our community members. Whether you're interested in personal development, practical life
-                    skills, or gaining insights into spiritual matters, there's something for everyone. Connect with
-                    others who share your passion for learning, engage in stimulating discussions, and unlock your full
-                    potential in a supportive and inspiring environment. Join us in this enriching educational
-                    adventure and experience the joy of lifelong learning and personal transformation.
+                    Our Educational Programs offer a place where learning and personal growth come alive! Whether
+                    through our premiere childcare center, summer camps or tutorial programs, we invite you to embark on
+                    an exciting journey of discovery as we explore a wide range of lessons, enhance our skills, and
+                    deepen our knowledge. Our educators consistently offer a wide range of educational programs,
+                    workshops, and classes designed to meet the diverse interests and needs of our members and the
+                    community. Whether you're interested in personal development, practical life skills, or gaining
+                    insights into spiritual matters, there's something for everyone. Connect with others who share your
+                    passion for learning, engage in stimulating discussions, and unlock your full potential in a
+                    supportive and inspiring environment.
                 </p>
             </div>
         </div>
@@ -143,13 +144,8 @@
             <div class="grid">
                 <div>
                     <div class="image">
-                        <img src="../static/images/logo.png" class="image__img">
-                        <div class="image__overlay image__overlay--primary">
-                        <div class="image__title">Event Title</div>
-                        <div class="image__description">
-                            Event overview
-                        </div>
-                        </div>
+                        <img src="../static/images/boyonbus.jpeg" class="image__img">
+
                     </div>
                 </div>
 
