--- a/website/templates/evangelism-outreach.html
+++ b/website/templates/evangelism-outreach.html
@@ -84,9 +84,10 @@
             <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
-            <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
-                We would love to welcome you to our family, or simply connect with a phone call to check in on you.
-                We would love to get to know you and your family!
+            <p>Greater Bethlehem Temple Church actively seeks to become a resource to the community by demonstrating the
+                love of Jesus Christ to the world. We would love to welcome you to our family, or simply connect with a
+                phone call to check in on you. Get to know us through dozens of distinct ministries aimed at pointing
+                souls to Christ.
             </p>
         </div>
     </div>
