--- a/website/templates/give.html
+++ b/website/templates/give.html
@@ -91,38 +91,24 @@
         <div class="floating-button-container">
             <div class="floating-button">
                 <ul>
-                    <a href="https://www.shelbygiving.com/App/Form/2811f602-ebe8-43c2-b315-6d7925d6f0b5"><li>GIVE NOW</li></a>
+                    <li><a href="https://www.shelbygiving.com/App/Form/2811f602-ebe8-43c2-b315-6d7925d6f0b5">GIVE NOW</a></li>
                 </ul>
             </div>
         </div>
     </div>
-
-<!--    <div class="mobile-banner">-->
-<!--        <img src="../static/images/basket.jpg" class="mobile-offering-img">-->
-<!--&lt;!&ndash;        <div class="blk-buffer"></div>&ndash;&gt;-->
-
-<!--        <div class="mob-floating-button-container">-->
-<!--            <div class="mob-floating-button">-->
-<!--                <ul>-->
-<!--                    <li><a href="https://www.shelbygiving.com/App/Form/2811f602-ebe8-43c2-b315-6d7925d6f0b5">GIVE NOW</a></li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
 
     <div class="buffer"></div>
     <div class="address">
         <p>Dear Church Family,<br><br>
 
             Thank you for your generous support of our mission!<br><br>
-            We employ the Shelby Giving platform to provide you the highest quality of service. To log in to our
-            system, simply use the email address associated with your Shelby Giving account as the username along
-            with your password. Parents with children in our Educational Programs may contact the Little Saints
-            Academy office at 662-845-4282 for questions about your account.
+            We employ the Shelby Giving platform to provide you the highest quality of service. To log in to our system,
+            under the “Sign In” tab, simply use the email address associated with your Shelby Giving account as the
+            username along with your password. No login is needed to give as a guest.
             <br><br>
             Please contact the Administrative Office at 601-354-2599 for any other questions or concerns.
             <br><br>
-            Thank you for your continued support!
+            Thank you for your continued support. Give Now!
             <br><br>
             <a style="color: black; text-decoration: none;" href="https://www.shelbygiving.com/cp/Account/Login">Office Administration</a>
         </p>
@@ -144,7 +130,8 @@
                 </a>
                 <hr class="card-divider">
                   <p>
-                      Thank you for being a cheerful giver. Your generosity supports the various ministries at GBT.
+                    Thank you for being a cheerful giver. Your generosity directly supports our local campus in
+                      Aberdeen, Mississippi.
                   </p>
                 <a href="https://www.shelbygiving.com/App/Form/8ca3fc26-2266-44f4-a627-2d40c3f8ebf7">
                     <img src="../static/images/aberdeen.webp" class="placeholder-img">
@@ -201,16 +188,6 @@
     </div>
     <div class="buffer"></div>
 
-<!--    <div class="pledge-container">-->
-<!--            <h2>Ongoing Pledges</h2>-->
-<!--            <hr class="pledge-divider">-->
-<!--            <img src="../static/images/landmark.jpg" class="placeholder-img">-->
-<!--            <p>We're on a mission to help our sister church, Landmark Temple of Holly Springs, Mississippi, build a-->
-<!--                new worship facility. The current building is in severe disrepair, and the members need our support-->
-<!--                to help secure a new church building. Please consider a pledge of $1000 or an amount you can afford,-->
-<!--                payable by April 1, 2023. Thank you for your prayerful support.-->
-<!--            </p>-->
-<!--        </div>-->
 
         <div class="buffer"></div>
 
