--- a/website/templates/missions.html
+++ b/website/templates/missions.html
@@ -84,9 +84,10 @@
             <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
-            <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
-                We would love to welcome you to our family, or simply connect with a phone call to check in on you.
-                We would love to get to know you and your family!
+            <p>Greater Bethlehem Temple Church actively seeks to become a resource to the community by demonstrating the
+                love of Jesus Christ to the world. We would love to welcome you to our family, or simply connect with a
+                phone call to check in on you. Get to know us through dozens of distinct ministries aimed at pointing
+                souls to Christ.
             </p>
         </div>
     </div>
@@ -116,16 +117,17 @@
     <!--        <hr class="heading-divider">-->
 
                 <p>
-                    Our vibrant Missions Ministry, where we are passionate about extending love, compassion,
-                    and hope to people around the world! If you have a heart for global outreach and making a positive
-                    impact, we invite you to join us on this transformative journey. Our Missions Ministry is dedicated
-                    to serving communities in need, spreading the message of God's love, and providing practical
-                    support to those facing challenging circumstances. Through partnerships with local organizations
-                    and mission trips, we offer opportunities for you to get involved in meaningful projects and
-                    experiences that will broaden your perspective and deepen your faith. Together, we can be a beacon
-                    of light, bringing hope to the marginalized, serving the vulnerable, and sharing God's love in
-                    tangible ways. Join us in this remarkable adventure of serving others and discover the joy of
-                    making a difference in the world.
+                    Through Missions, we are passionate about extending love, support, and hope to people around the
+                    world! If you have a heart for global outreach and making a positive impact, we invite you to join
+                    us on this transformative journey. Our Missions Ministry is dedicated to serving communities in
+                    need, spreading the message of God's love, and providing practical support to those facing
+                    challenging circumstances. Through partnerships with local organizations and mission trips, we offer
+                    opportunities for you to get involved in meaningful projects and experiences that will broaden your
+                    perspective and deepen your faith. Together, we can be a beacon of light, bringing hope to the
+                    marginalized, serving the vulnerable, and sharing God's love in tangible ways. Join us in this
+                    remarkable adventure of serving others and discover the joy of making a difference in the world.
+
+
                 </p>
             </div>
         </div>
@@ -144,11 +146,11 @@
             <div class="grid">
                 <div>
                     <div class="image">
-                        <img src="../static/images/logo.png" class="image__img">
+                        <img src="../static/images/missions.jpeg" class="image__img">
                         <div class="image__overlay image__overlay--primary">
-                        <div class="image__title">Event Title</div>
+                        <div class="image__title">New School Project</div>
                         <div class="image__description">
-                            Event overview
+                            Haiti
                         </div>
                         </div>
                     </div>
@@ -167,7 +169,8 @@
                     Ready to make a global impact? Join our Missions Ministry and be a part of bringing hope, healing,
                     and transformation to communities in need. Get connected today and discover how you can make a
                     difference through service, support, and cross-cultural experiences. Together, let's change lives
-                    and leave a lasting legacy of love.
+                    and leave a lasting legacy of love.<br><br>
+                    Email missions@gbtchurch.org to make a difference.
                 </p>
             </div>
         </div>
