--- a/website/templates/music-finearts.html
+++ b/website/templates/music-finearts.html
@@ -84,9 +84,10 @@
             <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
-            <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
-                We would love to welcome you to our family, or simply connect with a phone call to check in on you.
-                We would love to get to know you and your family!
+            <p>Greater Bethlehem Temple Church actively seeks to become a resource to the community by demonstrating the
+                love of Jesus Christ to the world. We would love to welcome you to our family, or simply connect with a
+                phone call to check in on you. Get to know us through dozens of distinct ministries aimed at pointing
+                souls to Christ.
             </p>
         </div>
     </div>
@@ -116,15 +117,15 @@
     <!--        <hr class="heading-divider">-->
 
                 <p>
-                    Welcome to our Music & Fine Arts Ministry, where creativity and worship converge to create a
-                    vibrant and inspiring experience! We invite you to join us on a captivating journey of artistic
-                    expression, where talents are nurtured, hearts are uplifted, and God is glorified. Whether you have
-                    a passion for music, dance, drama, visual arts, or any other form of creative expression, there's
-                    a place for you in our ministry. Through rehearsals, performances, and collaborative projects, we
-                    aim to create a space where your gifts can flourish and be used to impact lives. Join our talented
-                    and diverse community as we use our creativity to connect with God and touch the hearts of others.
-                    Together, let's celebrate the beauty of artistic expression and create meaningful experiences that
-                    inspire, encourage, and bring joy to all who encounter our ministry.
+                    Our Music & Fine Arts Ministry is where creativity and worship converge to create a anointed and
+                    inspiring experience! We invite you to join us on a captivating journey of artistic expression,
+                    where talents are nurtured, hearts are uplifted, and God is glorified. Whether you have a passion
+                    for music, dance, drama, visual arts, or any other form of creative expression, there's a place for
+                    you in our ministry. Through rehearsals, performances, and collaborative projects, we aim to create
+                    a space where your gifts can flourish and be used to impact lives. Join our talented and diverse
+                    community as we use our creativity to connect with God and touch the hearts of others. Together,
+                    let's celebrate the beauty of artistic expression and create meaningful experiences that inspire,
+                    encourage, and bring joy to all who encounter our ministry.
                 </p>
             </div>
         </div>
@@ -143,13 +144,8 @@
             <div class="grid">
                 <div>
                     <div class="image">
-                        <img src="../static/images/logo.png" class="image__img">
-                        <div class="image__overlay image__overlay--primary">
-                        <div class="image__title">Event Title</div>
-                        <div class="image__description">
-                            Event overview
-                        </div>
-                        </div>
+                        <img src="../static/images/leapsoffaith.png" class="image__img">
+
                     </div>
                 </div>
 
