--- a/website/templates/sundayschool.html
+++ b/website/templates/sundayschool.html
@@ -84,9 +84,10 @@
             <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
-            <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
-                We would love to welcome you to our family, or simply connect with a phone call to check in on you.
-                We would love to get to know you and your family!
+            <p>Greater Bethlehem Temple Church actively seeks to become a resource to the community by demonstrating the
+                love of Jesus Christ to the world. We would love to welcome you to our family, or simply connect with a
+                phone call to check in on you. Get to know us through dozens of distinct ministries aimed at pointing
+                souls to Christ.
             </p>
         </div>
     </div>
@@ -116,7 +117,7 @@
     <!--        <hr class="heading-divider">-->
 
                 <p>
-                    Welcome to our Sunday School Ministry, where children and adults alike discover the joy of learning,
+                    Welcome to our Sunday School Ministry where children and adults alike discover the joy of learning,
                     growing, and experiencing God's love together! We invite you to join our dynamic and welcoming
                     community as we dive into engaging Bible lessons, interactive activities, and meaningful
                     discussions that inspire spiritual growth. Whether you're a parent looking for a nurturing
@@ -164,10 +165,11 @@
             <div class="connect-content">
                 <h3>Get Connected</h3>
                 <p>
-                    Join our Sunday School Ministry and discover the joy of learning, growing, and connecting with
-                    God and others. All ages are welcome as we dive into engaging lessons, build lasting friendships,
-                    and deepen our faith journey together. Get connected and experience the transformative power of
-                    Sunday School in a warm and welcoming community.<br><br>
+
+                    Attend Sunday School Virtually!
+                    <br><br>
+                    Now you can attend Sunday School virtually when in-person attendance isn’t possible. Connect with
+                    us from anywhere via Zoom. Select one of the three classes below to get started<br><br>
                     <b>
                         Sunday Morning - @10:30<br><br>
 
