--- a/website/templates/youth.html
+++ b/website/templates/youth.html
@@ -84,9 +84,10 @@
             <h2>Ministries</h2>
         </div>
         <div class="banner-msg">
-            <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
-                We would love to welcome you to our family, or simply connect with a phone call to check in on you.
-                We would love to get to know you and your family!
+            <p>Greater Bethlehem Temple Church actively seeks to become a resource to the community by demonstrating the
+                love of Jesus Christ to the world. We would love to welcome you to our family, or simply connect with a
+                phone call to check in on you. Get to know us through dozens of distinct ministries aimed at pointing
+                souls to Christ.
             </p>
         </div>
     </div>
@@ -102,7 +103,7 @@
 
 
 
-                <div class="ministries-h2"><h2>Youth Ministry</h2></div>
+                <div class="ministries-h2"><h2>Youth & Young Adults Ministry</h2></div>
                 <hr class="ministries-divider">
 
     <div class="our-impact">
@@ -141,11 +142,11 @@
             <div class="grid">
                 <div>
                     <div class="image">
-                        <img src="../static/images/logo.png" class="image__img">
+                        <img src="../static/images/sanfords.png" class="image__img">
                         <div class="image__overlay image__overlay--primary">
-                        <div class="image__title">Event Title</div>
+                        <div class="image__title">Leadership</div>
                         <div class="image__description">
-                            Event overview
+                            Elder Jeremy Sanford, Director <br><br> Sis. LaTresha Sanford
                         </div>
                         </div>
                     </div>
@@ -162,14 +163,14 @@
                 <h3>Get Connected</h3>
                 <p>
                     Ready for an incredible journey of faith, friendship, and purpose? Connect with our Youth & Young
-                    Adults Ministry and discover a community that embraces and empowers you. Join us and be part of a
-                    vibrant and supportive network where you can grow spiritually and impact the world around you.
+                    Adults Ministry and discover a community that embraces and empowers you.
                     Don't wait any longer – get connected with the Youth of our Church, and embark on an exciting
-                    adventure that will shape your life!
+                    adventure that will shape your life!<br><br>
+                    Email us at youthministry@gbtchurch.org for more information.
                     <b>
 
                     <br> <br>Youth Service - Fridays 7PM<br> <br>
-                        Youth Leadership: Jeremy Sanford & Micah Sanford
+                        Youth Leadership: Elder Jeremy Sanford, Director & Sis. LaTresha Sanford
                     </b>
                 </p>
             </div>
