updated pics and write ups

--- a/website/templates/aberdeen.html
+++ b/website/templates/aberdeen.html
@@ -147,7 +147,7 @@
                         <div class="image__overlay image__overlay--primary">
                         <div class="image__title">Aberdeen Leadership</div>
                         <div class="image__description">
-                            Pastor Timothy Foster<br>
+                            <br>Pastor Timothy Foster<br>
                             First Lady Amy Foster
                         </div>
                         </div>
