--- a/website/templates/childrens_ministry.html
+++ b/website/templates/childrens_ministry.html
@@ -147,7 +147,7 @@
                             <div class="image__overlay image__overlay--primary">
                             <div class="image__title">Ministry Leaders</div>
                             <div class="image__description">
-                                Deacon Lester Donald <br><br> Sis. Cheronika Donald, Director
+                                <br>Deacon Lester Donald <br> Sis. Cheronika Donald, Director
                             </div>
                             </div>
                         </div>
