--- a/website/templates/youth.html
+++ b/website/templates/youth.html
@@ -146,7 +146,7 @@
                         <div class="image__overlay image__overlay--primary">
                         <div class="image__title">Leadership</div>
                         <div class="image__description">
-                            Elder Jeremy Sanford, Director <br><br> Sis. LaTresha Sanford
+                            <br>Elder Jeremy Sanford, Director <br> Sis. LaTresha Sanford
                         </div>
                         </div>
                     </div>
